--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,5 +1,5 @@
 cmake_minimum_required(VERSION 3.19)
-project(video2discord LANGUAGES CXX)
+project(video2discord LANGUAGES CXX VERSION 1.0)
 
 find_package(Qt6 6.5 REQUIRED COMPONENTS Core Widgets Concurrent)
 
@@ -44,3 +44,22 @@ qt_generate_deploy_app_script(
     NO_UNSUPPORTED_PLATFORM_ERROR
 )
 install(SCRIPT ${deploy_script})
+
+if(WIN32)
+    install(FILES Resources/Windows/ffmpeg.exe DESTINATION bin)
+
+    add_custom_command(TARGET video2discord POST_BUILD
+		    COMMAND windeployqt --release $<TARGET_FILE:video2discord>
+		    COMMENT "Running windeployqt..."
+    )
+
+    install(DIRECTORY ${CMAKE_BINARY_DIR}/$<CONFIG>/ DESTINATION bin)
+    if(WIN32)
+        set(CPACK_PACKAGE_NAME "video2discord")
+        set(CPACK_SYSTEM_NAME ${CMAKE_SYSTEM_NAME})
+        set(CPACK_PACKAGE_INSTALL_DIRECTORY ${CPACK_PACKAGE_NAME})
+        set(CPACK_PACKAGE_EXECUTABLES "video2discord" "Video 2 Discord")
+        set(CPACK_NSIS_INSTALLED_ICON_NAME "bin/video2discord.exe")
+    endif()
+    include(CPack)
+endif()
